Bug #62593 Updated to always treat zval by value