ext/pdo_pgsql/pgsql_statement.c
@@ -367,7 +367,7 @@ static int pgsql_stmt_param_hook(pdo_stmt_t *stmt, struct pdo_bound_param_data *
 	if (param->is_param) {
         /* We need to manually convert to a pg native boolean value */
         if (PDO_PARAM_TYPE(param->param_type) == PDO_PARAM_BOOL) {
-            SEPARATE_ZVAL_IF_NOT_REF(&param->parameter);
+            SEPARATE_ZVAL(&param->parameter);
             param->param_type = PDO_PARAM_STR;
             ZVAL_STRINGL(param->parameter, Z_BVAL_P(param->parameter) ? "t" : "f", 1, 1);
         }
